Add edited sign in and sign up page

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -16,7 +16,7 @@
                 <p>Password</p>
                 <input type = "password" name="name" placeholder="Enter password" required>
                 <br><br>
-                <button id="input_btn" type="submit"><a>USER</a></button>
+                <button id="input_btn" type="submit">LOG IN</button>
                 
                 
             </form>    
