--- a/UI/signupPage.html
+++ b/UI/signupPage.html
@@ -10,7 +10,7 @@
         <div><h1 class="header_title"><strong>iReporter</strong> Signup</h1></div>
         <div class="main_div">
             
-            <form>
+            <form action="redflagrecords.html">
                 <p>Name</p>
                 <input type = "text" placeholder="Enter full name" required>
                 <p>Email</p>
@@ -19,7 +19,7 @@
                 <input type = "password" placeholder="Enter password" required>
                 <p>Confirm Password</p>
                 <input type = "password" placeholder="Re-enter password" required><br><br>
-                <button id="input_btn"><a href="redflag.html">Create Account</a></button>
+                <button id="input_btn" type="submit">Create Account</button>
             </form>
             <div id="have_account"><span>Already have an account? </span><a href="signin.html">Sign in</a></div>
         </div>
