--- a/UI/signin.html
+++ b/UI/signin.html
@@ -10,7 +10,7 @@
         <div><h1 class="header_title"><strong>iReporter</strong> Signin</h1></div>
         <div class="main_div">
             
-            <form action="redflagrecords.html" method="post">
+            <form action="redflagrecords.html">
                 <p>Email</p>
                 <input type = "text" name="name" placeholder="Enter email address" required>
                 <p>Password</p>
