Update font sizes

--- a/UI/interventionrecords.html
+++ b/UI/interventionrecords.html
@@ -35,7 +35,7 @@
 
             <div class="incident_details">
                 <div class="panorama">
-                    <a href="redflagrecords.html">Red-flags</a>
+                    <a class="active" href="redflagrecords.html">Red-flags</a>
                     <a class="active">Interventions</a>
                 </div>
                 <div class="incident_elements">
