--- a/UI/redflagrecords.html
+++ b/UI/redflagrecords.html
@@ -35,7 +35,7 @@
             <div class="incident_details">
                 <div class="panorama">
                     <a class="active" href="#">Red-flags</a>
-                    <a href="interventionrecords.html">Interventions</a>
+                    <a class="active" href="interventionrecords.html">Interventions</a>
                 </div>
                 <div class="incident_elements">
                     
